@@ -25,6 +25,7 @@ import org.apache.lucene.store.FSDirectory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.NRTCachingDirectory;
 import org.apache.lucene.store.RateLimitedDirectoryWrapper;
+import org.apache.solr.core.CachingDirectoryFactory.CacheValue;
 
 /**
  * Directory provider which mimics original Solr 
@@ -45,7 +46,7 @@ public class StandardDirectoryFactory extends CachingDirectoryFactory {
   public String normalize(String path) throws IOException {
     String cpath = new File(path).getCanonicalPath();
     
-    return stripTrailingSlash(cpath);
+    return super.normalize(cpath);
   }
   
   public boolean isPersistent() {
@@ -59,23 +60,8 @@ public class StandardDirectoryFactory extends CachingDirectoryFactory {
   }
   
   @Override
-  public void remove(Directory dir) throws IOException {
-    synchronized (this) {
-      CacheValue val = byDirectoryCache.get(dir);
-      if (val == null) {
-        throw new IllegalArgumentException("Unknown directory " + dir);
-      }
-      
-      File dirFile = new File(val.path);
-      FileUtils.deleteDirectory(dirFile);
-
-    }
-  }
-
-  @Override
-  public void remove(String path) throws IOException {
-    String fullPath = normalize(path);
-    File dirFile = new File(fullPath);
+  protected void removeDirectory(CacheValue cacheValue) throws IOException {
+    File dirFile = new File(cacheValue.path);
     FileUtils.deleteDirectory(dirFile);
   }
   
